--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,24 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Being a person
+tagline:             'Sometimes'
+description:         'Some ramblings of me'
+# url:                 http://lanyon.getpoole.com
 baseurl:             ''
 paginate:            5
 permalink:           pretty
+plugins:
+  - jekyll-spaceship
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Marlon Blencowe
+  # url:               
+  email:             marlonblencowe@gmail.com
 
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-spaceship
 
 # Custom vars
 version:             1.1.0
